[package]
name = "RustenV2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
console_error_panic_hook = "0.1.7"
console_log = "0.1.2"
leptos = { version = "0.6.4", features = ["csr", "nightly"] }
leptos-use = "0.10.0"
leptos_router = { version = "0.6.11", features = ["csr"] }
log = "0.4.20"
rand = "0.8.5"
styled = "0.2.0"
stylist = "0.13.0"
time = "0.3.36"
web-sys = { features = ["CanvasRenderingContext2d"], version = "0.3.69" }
